# flockwave-gps

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  setup.py  tbump.toml
.github/workflows/: pytest.yml
flockwave/gps/: __init__.py  constants.py  crc.py  distances.py  errors.py  vectors.py  version.py
flockwave/gps/http/: __init__.py  dechunkers.py  errors.py  request.py  response.py
flockwave/gps/ntrip/: __init__.py  client.py
flockwave/gps/rtcm/: __init__.py  broker.py  correction.py  encoders.py  ephemeris.py  errors.py  packets.py  parsers.py  utils.py  writers.py
src/flockwave/gps/: constants.py  crc.py  distances.py  encoder.py  enums.py  formatting.py  parser.py  time.py  vectors.py  version.py
src/flockwave/gps/http/: __init__.py  _lazy_deps.py  dechunkers.py  errors.py  request.py  response.py  utils.py
src/flockwave/gps/javad/: __init__.py  rtk_config.py
src/flockwave/gps/nmea/: __init__.py  encoder.py  packet.py  parser.py
src/flockwave/gps/ntrip/: client.py  errors.py  replay.py
src/flockwave/gps/rtcm/: __init__.py  correction.py  encoders.py  ephemeris.py  errors.py  packets.py  parsers.py  utils.py
src/flockwave/gps/rtk/: __init__.py  base.py
src/flockwave/gps/ubx/: __init__.py  encoder.py  enums.py  message.py  packet.py  parser.py  rtk_config.py  utils.py
test/gps/: test_distances.py  test_formatting.py  test_nmea_encoder.py  test_nmea_parser.py  test_rtk_base.py  test_time.py  test_ubx_parser.py  test_vectors.py
test/gps/ubx/: test_message.py
test/http/: test_request.py  test_utils.py
