[project]
name = "flockwave-gps"
version = "3.4.0"
description = "GPS and geography related routines and classes"
authors = [{ name = "Tamas Nepusz", email = "tamas@collmot.com" }]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "bitstring>=4.0.1",
    "pynmea2>=1.19.0"
]

[project.optional-dependencies]
cli = [
    "click>=8.1.0",
    "trio>=0.24.0"
]
ntrip = [
    "trio>=0.24.0"
]

[tool.poetry]
packages = [
    { include = "flockwave", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
coverage = {extras = ["toml"], version = "^7.8.0"}

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "collmot"
url = "https://pypi.collmot.com/simple/"
priority = "explicit"

[[tool.poetry.source]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
priority = "supplemental"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
