[project]
name = "flockwave-gps"
version = "4.0.0"
description = "GPS and geography related routines and classes"
authors = [{ name = "Tamas Nepusz", email = "tamas@collmot.com" }]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "bitstring>=4.0.1",
  "pynmea2>=1.19.0"
]

[project.optional-dependencies]
cli = [
  "click>=8.1.0",
  "trio>=0.30.0"
]
ntrip = ["trio>=0.30.0"]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1",
  "coverage[toml]>=7.8.0"
]

[tool.uv.build-backend]
module-name = "flockwave.gps"

[[tool.uv.index]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
publish-url = "https://pypi.fury.io/skybrush/"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["uv_build>=0.10,<0.11"]
build-backend = "uv_build"
