[project]
name = "flockwave-gps"
version = "5.0.0"
description = "GPS and geography related routines and classes"
authors = [{ name = "Tamas Nepusz", email = "tamas@collmot.com" }]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "bitstring>=4.0.1",
  "pynmea2>=1.19.0",
]

[project.optional-dependencies]
cli = [
  "click>=8.1.0",
  "trio>=0.30.0"
]
ntrip = ["trio>=0.30.0"]

[dependency-groups]
dev = [
  "flockwave-conn[serial]>=9.0.0",
  "poethepoet>=0.42.1",
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1",
  "coverage[toml]>=7.8.0",
  "ruff>=0.15.8",
  "ty>=0.0.27",
]

[tool.uv.build-backend]
module-name = "flockwave.gps"

[[tool.uv.index]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
publish-url = "https://pypi.fury.io/skybrush/"

[tool.uv.sources]
flockwave-conn = { index = "fury" }

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.poe.tasks]

format = "ruff format . --check"
format-fix = "ruff format ."

lint = "ruff check ."
lint-fix = "ruff check . --fix"

ty = "ty check src/ test/"

check.sequence = ["format", "lint"]
check.ignore_fail = "return_non_zero"

test.cmd = "python -m pytest test"

[tool.ruff]
lint.ignore = [
  "C901", # Too complex
  "S101", # Use of assert detected - we use them in unit tests and to help type inference
]
lint.select = ["B", "C", "E", "F", "I", "S", "W"]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"
